fix: Update href in mainPage.json for trainee registration link style: Adjust scrollbar width in globals.css for better visibility

--- a/app/[lang]/globals.css
+++ b/app/[lang]/globals.css
@@ -42,6 +42,7 @@
 
 /* Smooth scroll behavior for HTML */
 html {
+  width: 8px;
   scroll-behavior: smooth;
 }
 
@@ -52,7 +53,7 @@ img {
 
 /* Customize scrollbar styles */
 ::-webkit-scrollbar {
-  width: 0;
+  width: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
